# LASHA

./: Cargo.toml  README.md  build.rs
include/: g722.h  g722_encode.c
src/: ASHA.rs  build.rs  main.rs
