[package]
name = "LASHA"
version = "0.1.0"
edition = "2021"

[lib]
name = "ASHA"
path = "src/ASHA.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluer = {version = "0.16.1", features = ["full"]}
eframe = "0.16.0"
futures = "0.3.29"
tokio = "1.33.0"
uuid  = "1.5.0"